# DC_Editor

./: .gitignore  CLOUDINARY_SETUP.md  CODE_EXECUTION_GUIDE.md  Dockerfile  README.md  build-docker.sh  eslint.config.js  index.html  package-lock.json  package.json  testJdoodle.js  vite.config.js
.terminal-workspaces/01c32f38-dbac-4733-8d46-192ed9493acf-55ad938d-3fcb-4938-8aa7-ec1e48386643/: .collab-files.json
.terminal-workspaces/057a2571-800c-4c98-b007-6f727e864d2d-2dff5905-4fdd-45d8-9ae9-a6531958622b/: .collab-files.json  README.md
.terminal-workspaces/127513b5-bd07-41df-81d3-af19bafc8833-user_3A82wb7KJLsNnjpOjFmyBF0HaoA/: .collab-files.json  README.md
.terminal-workspaces/163ef7bc-fdb2-476e-9e82-b4dbf6a57c8d-user_3A82wb7KJLsNnjpOjFmyBF0HaoA/: README.md
.terminal-workspaces/303ea310-7110-47b8-8a94-58151a1b2699-user_3A82wb7KJLsNnjpOjFmyBF0HaoA/: .collab-files.json  README.md
.terminal-workspaces/3b934125-c110-4ed0-9697-7fca637e02ad-2dff5905-4fdd-45d8-9ae9-a6531958622b/: package.json
.tw/88d01d6380e1b5ee/: .collab-files.json  README.md  expenses.json  pyproject.toml  start.bat  start.ps1  start.sh
.tw/88d01d6380e1b5ee/src/: main.py
.tw/88d01d6380e1b5ee/src/pr/: app.py  main.py
.tw/88d01d6380e1b5ee/tests/: test_app.py
database/: complete_migration.sql  fix_collab_folders_constraint.sql  migrate_from_clerk_to_jwt.sql  schema_pgadmin.sql
deploy/dsa/: README.md  (+4 more)
scripts/: verify-node-express-variants.mjs  verify-react-vite-variants.mjs  verify-vue-vite-js-mirror.mjs  verify-vue-vite-variants.mjs
server/: index.js
src/: App.jsx  index.css  main.jsx
(+320 files in other folders)
